--- a/ALL_CASH_PROPERTY_DEALS/How_It_Works_files/How_It_Works.css
+++ b/ALL_CASH_PROPERTY_DEALS/How_It_Works_files/How_It_Works.css
@@ -177,9 +177,6 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_External_320_855 {
-    position: relative;
-}
 .paragraph_style_8 {
     color: rgb(88, 77, 77);
     font-family: 'VAG-HandWritten';
@@ -306,6 +303,9 @@
     background: transparent;
     opacity: 1.00;
 }
+.style_External_320_1978 {
+    position: relative;
+}
 .style_External_630_73 {
     position: relative;
 }
@@ -360,7 +360,7 @@
 .Normal {
     padding: 4px;
 }
-.Normal_External_320_855 {
+.Normal_External_320_1978 {
     position: relative;
 }
 .Normal_External_630_73 {
